--- a/apps/mix-cms/src/app/components/database-select/database-select.component.html
+++ b/apps/mix-cms/src/app/components/database-select/database-select.component.html
@@ -17,13 +17,19 @@
   <div class="database-select__title">{{ prefix }} Tables ({{ vm.data.length || '0' }})</div>
 
   <div class="database-select__list">
-    <ng-container *ngFor="let table of (searchText.value | filter:vm.data)">
-      <div class="database-select__item"
-           [class.--active]="selectedItemId == table.id"
-           (click)="selectDb(table)">
-        <!-- <span class="mix-icon">database</span> -->
-        <span>{{ table.displayName }}</span>
-      </div>
+    <ng-container *ngIf="vm.status ==='Loading'">
+      <mix-skeleton-loading [type]="'none'"></mix-skeleton-loading>
     </ng-container>
+    <ng-container *ngIf="vm.status ==='Success'">
+      <ng-container *ngFor="let table of (searchText.value | filter:vm.data)">
+        <div class="database-select__item"
+             [class.--active]="selectedItemId == table.id"
+             (click)="selectDb(table)">
+          <!-- <span class="mix-icon">database</span> -->
+          <span>{{ table.displayName }}</span>
+        </div>
+      </ng-container>
+    </ng-container>
+
   </div>
 </div>
