--- a/apps/mix-cms/src/app/components/main-toolbar/main-toolbar.component.html
+++ b/apps/mix-cms/src/app/components/main-toolbar/main-toolbar.component.html
@@ -35,7 +35,7 @@
 
   <ng-container *ngIf="auth.cultures$ | async as cultures">
     <div *ngIf="cultures?.length"
-         class="main-toolbar__culture">
+         class="main-toolbar__culture ms-auto">
       <mix-button type="flat"
                   [iconBtn]="true"
                   [size]="'s'"
