--- a/libs/mix-ui/src/skeleton-loading/skeleton-loading.component.html
+++ b/libs/mix-ui/src/skeleton-loading/skeleton-loading.component.html
@@ -106,4 +106,8 @@
       </div>
     </div>
   </ng-container>
+
+  <ng-container *ngIf="type === 'inline'">
+    <span class="skeleton-box"></span>
+  </ng-container>
 </div>
