--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
@@ -19,6 +19,7 @@
 
     <ng-container *ngIf="vm.status !== 'Pending'">
       <mix-sub-toolbar [description]="'QUERY ON'"
+                       [loading]="vm.status === 'Loading'"
                        [title]="vm.db?.displayName || 'Db Data'">
         <div class="toolbar-separator"></div>
         <mix-action-collapse [actionMaps]="actionMaps"
@@ -157,8 +158,12 @@
           </div>
 
           <ng-container *ngIf="vm.status === 'Loading'">
-            <mix-skeleton-loading type="table"></mix-skeleton-loading>
+            <div class="p-3">
+              <mix-skeleton-loading type="table"></mix-skeleton-loading>
+            </div>
           </ng-container>
+
+          <ng-container *ngIf="vm.status === 'Error'">error</ng-container>
         </div>
 
         <div class="mix-dbs-table__footer">
