--- a/apps/mix-cms/src/styles.scss
+++ b/apps/mix-cms/src/styles.scss
@@ -11,6 +11,7 @@
 @import './assets/styles/font.scss';
 @import './assets/styles/progress-bar.scss';
 @import './assets/styles/tippy.scss';
+@import './assets/styles/notifications.scss';
 
 @import 'node_modules/@ngneat/hot-toast/src/styles/styles.scss';
 @import '~jsoneditor/dist/jsoneditor.min.css';
