--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
@@ -61,7 +61,7 @@
 
         <div class="mix-dbs-table__main-container">
           <div class="h-100 w-100"
-               [class.d-none]="vm.status !== 'Success'">
+               [class.d-none]="vm.status !== 'Success' || vm.loadDataError">
             <ag-grid-angular class="ag-theme-alpine"
                              [animateRows]="true"
                              [columnDefs]="columnDefs"
@@ -75,86 +75,6 @@
                              (gridReady)="onGridReady($event)"
                              style="width: 100%; height: 100%">
             </ag-grid-angular>
-
-            <!-- <table class="mix-dbs-table__table"
-                   [columns]="vm.columnKeys"
-                   tuiTable>
-              <thead>
-                <tr tuiThGroup>
-                  <th *tuiHead="'checkbox'"
-                      class="mix-dbs-table__th"
-                      [resizable]="true"
-                      [sorter]="null"
-                      [sticky]="true"
-                      tuiTh>
-                    <tui-checkbox [ngModel]="isAllCheck"
-                                  [size]="'m'"
-                                  (click)="$event.stopPropagation()"></tui-checkbox>
-                  </th>
-
-                  <ng-container *ngFor="let col of vm.columns">
-                    <th *tuiHead="col.systemName"
-                        class="mix-dbs-table__th"
-                        [resizable]="true"
-                        [sorter]="null"
-                        [sticky]="true"
-                        tuiTh>
-                      <span class="text-highlight">{{ col.dataType }}</span> &nbsp; {{ col.displayName }}
-                    </th>
-                  </ng-container>
-
-                  <th *tuiHead="'add-col'"
-                      class="mix-dbs-table__th --sticky-r"
-                      [resizable]="true"
-                      [sorter]="null"
-                      [sticky]="true"
-                      tuiTh>
-                    <mix-button><span class="mix-icon">add</span></mix-button>
-                  </th>
-                </tr>
-              </thead>
-              <tbody [data]="vm.data"
-                     tuiTbody>
-                <tr *ngFor="let item of vm.data"
-                    tuiTr>
-                  <td *tuiCell="'checkbox'"
-                      class="mix-dbs-table__td --check"
-                      tuiTd>
-                    <tui-checkbox [ngModel]="isAllCheck"
-                                  [size]="'m'"
-                                  (click)="$event.stopPropagation()"></tui-checkbox>
-                  </td>
-
-                  <ng-container *ngFor="let col of vm.columns">
-                    <td *tuiCell="col.systemName"
-                        class="mix-dbs-table__td"
-                        [class.--active]="activeCol === col.systemName + item['id']"
-                        (click)="activeCol = col.systemName + item['id']"
-                        tuiTd>
-                      {{ $any(item)[col.systemName] }}
-                    </td>
-                  </ng-container>
-
-                  <td *tuiCell="'add-col'"
-                      class="mix-dbs-table__td --sticky-r"
-                      tuiTd>
-                    <mix-button type="icon"><span class="mix-icon">more_horiz</span></mix-button>
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="mix-dbs-table__td --check"
-                      tuiTd>
-                  </td>
-                  <ng-container *ngFor="let col of vm.columns; let i = index">
-                    <td class="mix-dbs-table__td"
-                        tuiTd>
-                      <mix-button *ngIf="i === 0"><span class="mix-icon">add</span>&nbsp;Insert</mix-button>
-                    </td>
-                  </ng-container>
-                </tr>
-              </tbody>
-            </table> -->
           </div>
 
           <ng-container *ngIf="vm.status === 'Loading'">
@@ -163,7 +83,13 @@
             </div>
           </ng-container>
 
-          <ng-container *ngIf="vm.status === 'Error'">error</ng-container>
+          <ng-container *ngIf="vm.loadDataError">
+            <div class="p-3">
+              <div class="notification --error">
+                Something error when try to load data, your table may not be migrate to single table.
+              </div>
+            </div>
+          </ng-container>
         </div>
 
         <div class="mix-dbs-table__footer">
