--- a/apps/mix-cms/src/app/components/entity-form/entity-form.component.scss
+++ b/apps/mix-cms/src/app/components/entity-form/entity-form.component.scss
@@ -21,6 +21,7 @@ mix-entity-form {
     top: 50%;
     right: 18px;
     transform: translate(0, -50%);
+    display: flex;
 
     mix-button {
       margin-left: 8px;
