--- a/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
@@ -97,25 +97,25 @@
           <mix-text-area placeHolder="Description"
                          formControlName="description"></mix-text-area>
 
-          <tui-notification class="mt-3">
+          <div class="mt-3 notification --info">
             Visit
             <a href="https://docs.mixcore.org/"
                target="_blank">Here</a> to get
             more information how Mixcore Database work.
-          </tui-notification>
+          </div>
         </div>
 
         <!-- Content -->
         <div class="data-detail-page__main-content"
              [class.d-none]="activeTabIndex !== 1">
-          <tui-notification class="mt-1">
+          <div class="mt-1 notification --info">
             Default system columns:
             <span class="text-highlight">id</span>,
             <span class="text-highlight">createdAt</span>,
             <span class="text-highlight">createdBy</span>,
             <span class="text-highlight">updatedAt</span>,
             <span class="text-highlight">priority</span>
-          </tui-notification>
+          </div>
 
           <div class="entity-table-header mt-3">
             <div class="row">
