--- a/apps/mix-cms/src/app/components/database-select/database-select.component.scss
+++ b/apps/mix-cms/src/app/components/database-select/database-select.component.scss
@@ -4,7 +4,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  box-shadow: -30px 3px 50px -45px rgba(0, 0, 0, 0.5) inset;
+  box-shadow: -25px 5px 25px -40px #00000080 inset;
   border: 1px solid var(--border-color-default);
 
   &__add-btn {
