feat(): update insert db

--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
@@ -45,10 +45,10 @@
 
           <ng-template #tpl
                        let-hide>
-            <tui-reorder class="columns"
-                         [(enabled)]="displayColumns"
+            <tui-reorder [(enabled)]="displayColumns"
                          [(items)]="columnNames"
-                         (enabledChange)="displayColumns$.next(displayColumns)"></tui-reorder>
+                         (enabledChange)="displayColumns$.next(displayColumns)"
+                         style="width: 300px;"></tui-reorder>
           </ng-template>
 
           <mix-button *ngIf="vm.db"
