--- a/apps/mix-cms/src/styles.scss
+++ b/apps/mix-cms/src/styles.scss
@@ -296,10 +296,15 @@ ngneat-dialog {
     margin-bottom: 4px;
   }
 
+  &__content {
+    margin: 24px 0px;
+  }
+
   &__footer {
     margin-top: 4px;
     display: flex;
     align-items: center;
+    gap: 4px;
     justify-content: flex-end;
   }
 }
@@ -317,4 +322,8 @@ ngneat-dialog {
   --ag-header-height: 32px;
   --ag-row-height: 32px;
   --ag-row-hover-color: rgba(233, 234, 237, 0.5);
+}
+
+tui-dropdown-host {
+  z-index: unset !important;
 }
