--- a/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
@@ -42,7 +42,7 @@
                       type="secondary"
                       [size]="'s'"
                       (click)="goDatabaseData(data.systemName)">
-            View Data &nbsp;
+            View data source&nbsp;
             <span class="mix-icon"> arrow_right_alt </span>
           </mix-button>
 
