feat(): edit column

--- a/libs/mix-ui/src/button/button.component.scss
+++ b/libs/mix-ui/src/button/button.component.scss
@@ -1,5 +1,5 @@
 mix-button {
-  display: block;
+  display: inherit;
   width: fit-content;
 }
 
@@ -14,9 +14,5 @@ mix-button {
 
   .t-content {
     line-height: 1;
-  }
-
-  &.icon-btn {
-    // --tui-padding: 0.5rem;
   }
 }
