--- a/apps/mix-cms/src/app/components/main-toolbar/main-toolbar.component.html
+++ b/apps/mix-cms/src/app/components/main-toolbar/main-toolbar.component.html
@@ -42,18 +42,18 @@
                   [tp]="cultureTpl"
                   tpPlacement="bottom-end"
                   tpVariation="popper">
-        <!-- <span class="mix-icon"> menu </span> -->
-
         <span class="flag-icon {{ auth.currentCulture?.icon }}"
               style="width: 16px; height: 10px;"></span>
       </mix-button>
 
-      <ng-template #cultureTpl>
+      <ng-template #cultureTpl
+                   let-hide>
         <div *ngFor="let culture of cultures"
              class="mix-menu-item"
-             (click)="changeCulture(culture)">
+             (click)="hide(); changeCulture(culture)">
           <span class="main-toolbar__culture-icon flag-icon {{ culture.icon }}"></span>{{ culture.displayName }}
         </div>
+
       </ng-template>
     </div>
   </ng-container>
@@ -68,13 +68,14 @@
       <span class="mix-icon"> menu </span>
     </mix-button>
 
-    <ng-template #userMenuTpl>
+    <ng-template #userMenuTpl
+                 let-hide>
       <div class="mix-menu-item">
         {{ 'Account Information' }}
       </div>
 
       <div class="mix-menu-item"
-           (click)="logout()">
+           (click)="hide(); logout()">
         {{ 'Logout' }}
       </div>
     </ng-template>
