--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
@@ -73,6 +73,7 @@
                              [rowSelection]="'multiple'"
                              [suppressMoveWhenRowDragging]="true"
                              (gridReady)="onGridReady($event)"
+                             (selectionChanged)="onSelectionChanged()"
                              style="width: 100%; height: 100%">
             </ag-grid-angular>
           </div>
