--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
@@ -19,7 +19,7 @@
 
     <ng-container *ngIf="vm.status !== 'Pending'">
       <mix-sub-toolbar [description]="'QUERY ON'"
-                       [loading]="vm.status === 'Loading'"
+                       [loading]="vm.status === 'Loading' && vm.db === undefined"
                        [title]="vm.db?.displayName || 'Db Data'">
         <div class="toolbar-separator"></div>
         <mix-action-collapse [actionMaps]="actionMaps"
@@ -29,6 +29,7 @@
       <div class="data-table-page__body d-flex flex-column">
         <div class="mix-dbs-table__toolbar">
           <mix-input class="search"
+                     [formControl]="searchForm"
                      [searchIcon]="true"
                      placeHolder="Search on string fields"></mix-input>
 
