feat(): fix text

--- a/apps/mix-cms/src/app/components/database-select/database-select.component.html
+++ b/apps/mix-cms/src/app/components/database-select/database-select.component.html
@@ -6,7 +6,7 @@
               [type]="'outline'"
               (click)="createDb()">
     <span class="mix-icon">add</span>&nbsp;
-    New Table'
+    New Table
   </mix-button>
 
   <mix-input class="database-select__search"
