feat: update side menu

--- a/apps/mix-cms/src/app/components/main-side-menu/main-side-menu.component.scss
+++ b/apps/mix-cms/src/app/components/main-side-menu/main-side-menu.component.scss
@@ -105,7 +105,9 @@
       background-color: var(--menu-active-color);
     }
 
-    &.--active {
+    &.--route-active {
+      background-color: var(--menu-active-color);
+
       &::before {
         position: absolute;
         width: 4px;
