--- a/apps/mix-cms/src/app/components/main-side-menu/main-side-menu.component.html
+++ b/apps/mix-cms/src/app/components/main-side-menu/main-side-menu.component.html
@@ -1,13 +1,10 @@
-<div class="side-menu d-flex"
-     (tuiActiveZoneChange)="onActiveZone($event)">
+<div class="side-menu d-flex">
   <div class="side-menu__icon-bar"
        [ngClass]="{ '--active': showDetail }">
     <div class="side-menu__item --fixed"
          (click)="showDetail = !showDetail">
       <div class="side-menu__parent-container">
-        <span class="mix-icon side-menu__icon">
-          menu
-        </span>
+        <span class="mix-icon side-menu__icon"> menu </span>
       </div>
     </div>
 
@@ -21,9 +18,13 @@
                          tuiDropdownHover
                          tuiDropdownDirection="bottom">
       <div class="side-menu__item"
-           [ngClass]="{'--open':  selectedMenu?.title === item.title}"
+           [ngClass]="{
+          '--open': selectedMenus[item.title],
+          '--active': selectedMenus[item.title]
+        }"
            [routerLink]="'/' + item.url"
-           [routerLinkActive]="'--active'">
+           [routerLinkActive]="'--route-active'"
+           (click)="onMenuSelect(item)">
         <div class="side-menu__parent-container">
           <span *ngIf="item.icon"
                 class="mix-icon side-menu__icon">
@@ -38,18 +39,22 @@
 
         <span *ngIf="showDetail && item.children?.length"
               class="side-menu__item-toggle mix-icon"
-              [ngClass]="{'--active': selectedMenu?.title === item.title}"
+              [ngClass]="{ '--active': selectedMenus[item.title] }"
               (click)="$event.stopPropagation(); onMenuSelect(item)">
           chevron_right
         </span>
 
-        <div *ngIf="showDetail && item.children?.length && selectedMenu?.title === item.title"
+        <div *ngIf="
+            showDetail && item.children?.length && selectedMenus[item.title]
+          "
              class="side-menu__child-container">
           <div *ngFor="let child of item.children"
                class="side-menu__child-item"
                [routerLink]="'/' + child.url"
                (click)="$event.stopPropagation()">
-            <span class="mix-icon">{{ child.icon || 'fiber_manual_record' }}</span>
+            <span class="mix-icon">{{
+              child.icon || 'fiber_manual_record'
+            }}</span>
             <span>
               {{ child.title }}
             </span>
