--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
@@ -4,6 +4,7 @@
     <mix-database-select [isCreate]="false"
                          [prefix]="'Query'"
                          [selectedItemId]="vm.db?.id"
+                         [selectedItemName]="dbSysName"
                          (selectedItemChange)="selectedTableChange($event)"></mix-database-select>
   </div>
 
