--- a/apps/mix-cms/src/app/components/database-select/database-select.component.scss
+++ b/apps/mix-cms/src/app/components/database-select/database-select.component.scss
@@ -14,10 +14,12 @@
   }
 
   &__title {
-    font-size: var(--text-size-m);
+    font-size: var(--text-size-xs);
     margin-bottom: 0.5rem;
     margin-top: 1rem;
     font-weight: 500;
+    opacity: 0.7;
+    margin-left: 6px;
   }
 
   &__list {
@@ -36,7 +38,6 @@
     cursor: pointer;
     white-space: nowrap;
     text-overflow: ellipsis;
-    margin-bottom: 4px;
     font-size: 12px;
 
     &.--active,
