--- a/apps/mix-cms/src/app/components/main-side-menu/main-side-menu.component.html
+++ b/apps/mix-cms/src/app/components/main-side-menu/main-side-menu.component.html
@@ -1,78 +1,91 @@
 <div class="side-menu d-flex">
   <div class="side-menu__icon-bar"
-       [class.--active]="showDetail">
+       [ngClass]="{ '--active': showDetail }">
     <div class="side-menu__item --fixed"
-         (click)="toggleMenu()">
+         (click)="showDetail = !showDetail">
       <div class="side-menu__parent-container">
         <span class="mix-icon side-menu__icon"> menu </span>
       </div>
     </div>
 
-    <div *ngFor="let item of menu"
-         class="side-menu__item"
-         [ngClass]="{
-        '--open': selectedMenus[item.title],
-        '--active': selectedMenus[item.title]
-      }"
-         [routerLink]="'/' + item.url"
-         [routerLinkActive]="'--route-active'"
-         (click)="onMenuSelect(item)">
-      <div class="side-menu__parent-container">
-        <span *ngIf="item.icon"
-              class="mix-icon side-menu__icon">
-          {{ item.icon }}
-        </span>
+    <tui-hosted-dropdown *ngFor="let item of menu"
+                         class="w-100"
+                         [canOpen]="!showDetail"
+                         [content]="dropdown"
+                         [sided]="true"
+                         [tuiDropdownHideDelay]="50"
+                         [tuiDropdownShowDelay]="0"
+                         tuiDropdownHover
+                         tuiDropdownDirection="bottom">
+      <!-- [routerLink]="'/' + item.url" -->
+      <div class="side-menu__item"
+           [ngClass]="{
+          '--open': isMenuSelected(item, selectedMenu),
+          '--active': isMenuSelected(item, selectedMenu)
+        }"
+           [routerLinkActive]="'--route-active'"
+           (click)="onMenuSelect(item)">
+        <div class="side-menu__parent-container">
+          <span *ngIf="item.icon"
+                class="mix-icon side-menu__icon">
+            {{ item.icon }}
+          </span>
 
-        <span class="side-menu__item-title"
-              [class.d-none]="!showDetail">
-          {{ item.title | transloco }}
-        </span>
-      </div>
-
-      <span *ngIf="showDetail && item.children?.length"
-            class="side-menu__item-toggle mix-icon"
-            [ngClass]="{ '--active': selectedMenus[item.title] }"
-            (click)="$event.stopPropagation(); onMenuSelect(item)">
-        chevron_right
-      </span>
-
-      <div *ngIf="showDetail && item.children?.length && selectedMenus[item.title]"
-           class="side-menu__child-container">
-        <div *ngFor="let child of item.children"
-             class="side-menu__child-item"
-             [routerLink]="'/' + child.url"
-             (click)="$event.stopPropagation()">
-          <span class="mix-icon">{{
-            child.icon || 'fiber_manual_record'
-          }}</span>
-          <span>
-            {{ child.title }}
+          <span *ngIf="showDetail"
+                class="side-menu__item-title">
+            {{ item.title | transloco }}
           </span>
         </div>
-      </div>
-    </div>
 
-    <!-- <ng-template #dropdown
-                 let-close="close">
-      <tui-data-list>
-        <tui-opt-group>
-          <button *ngFor="let item of item.children"
-                  class="menu"
-                  [routerLink]="'/' + item.url"
-                  [routerLinkActive]="'--active'"
-                  [routerLinkActiveOptions]="{ exact: true }"
-                  (click)="onMenuSelect(item)"
-                  style="justify-content: flex-start"
-                  tuiOption>
-            <span *ngIf="item.icon"
-                  class="mix-icon me-2">
-              {{ item.icon }}
+        <span *ngIf="showDetail && item.children?.length"
+              class="side-menu__item-toggle mix-icon"
+              [ngClass]="{ '--active': isMenuSelected(item, selectedMenu) }"
+              (click)="$event.stopPropagation(); onMenuSelect(item)">
+          chevron_right
+        </span>
+
+        <div *ngIf="
+            showDetail &&
+            item.children?.length &&
+            isMenuSelected(item, selectedMenu)
+          "
+             class="side-menu__child-container">
+          <div *ngFor="let child of item.children"
+               class="side-menu__child-item"
+               [routerLink]="'/' + child.url"
+               (click)="$event.stopPropagation()">
+            <span class="mix-icon">{{
+              child.icon || 'fiber_manual_record'
+            }}</span>
+            <span>
+              {{ child.title }}
             </span>
+          </div>
+        </div>
+      </div>
 
-            {{ item.title | transloco }}
-          </button>
-        </tui-opt-group>
-      </tui-data-list>
-    </ng-template> -->
+      <ng-template #dropdown
+                   let-close="close">
+        <tui-data-list>
+          <tui-opt-group>
+            <button *ngFor="let item of item.children"
+                    class="menu"
+                    [routerLink]="'/' + item.url"
+                    [routerLinkActive]="'--active'"
+                    [routerLinkActiveOptions]="{ exact: true }"
+                    (click)="onMenuSelect(item)"
+                    style="justify-content: flex-start"
+                    tuiOption>
+              <span *ngIf="item.icon"
+                    class="mix-icon me-2">
+                {{ item.icon }}
+              </span>
+
+              {{ item.title | transloco }}
+            </button>
+          </tui-opt-group>
+        </tui-data-list>
+      </ng-template>
+    </tui-hosted-dropdown>
   </div>
 </div>
