--- a/apps/mix-cms/src/app/components/main-side-menu/main-side-menu.component.scss
+++ b/apps/mix-cms/src/app/components/main-side-menu/main-side-menu.component.scss
@@ -59,7 +59,7 @@
     }
 
     &:hover {
-      background-color: var(--menu-active-color);
+      color: var(--primary-color);
     }
 
     &:first-of-type {
