--- a/apps/mix-cms/src/app/pages/auth/login/login.component.html
+++ b/apps/mix-cms/src/app/pages/auth/login/login.component.html
@@ -6,14 +6,10 @@
   </div>
 
   <form class="login__container">
-    <div class="login__title">
-      Sign In
-    </div>
-    <div class="login__des">
-      Let manage your site together!
-    </div>
+    <div class="login__title">Sign In</div>
+    <div class="login__des">Let manage your site together!</div>
 
-
+    <!--
     <div class="mt-8 d-flex">
       <form class="d-flex w-100 justify-content-center align-items-center"
             [formGroup]="modeForm">
@@ -27,7 +23,7 @@
           Staging
         </tui-radio-labeled>
       </form>
-    </div>
+    </div> -->
 
     <mix-input class="mt-8"
                placeHolder="Username/Email"
@@ -52,7 +48,8 @@
   </form>
 
   <div class="mt-4">
-    <span>Developed by <a href="https://mixcore.studio/"
+    <span>Developed by
+      <a href="https://mixcore.studio/"
          target="_blank"
          tuiLink>Mixcore Studio</a></span>
   </div>
