--- a/libs/mix-ui/src/rich-text-editor/rich-text-editor.component.html
+++ b/libs/mix-ui/src/rich-text-editor/rich-text-editor.component.html
@@ -1,7 +1,6 @@
 <div class="rich-text-editor"
      [ngClass]="{ '--full-width': zoom }">
-  <tui-editor *ngIf="control"
-              [formControl]="control">
+  <tui-editor [formControl]="control">
     {{ placeHolder }}
   </tui-editor>
 
