--- a/apps/mix-cms/src/app/pages/portal/task-manage/task-manage.component.scss
+++ b/apps/mix-cms/src/app/pages/portal/task-manage/task-manage.component.scss
@@ -4,46 +4,15 @@
     height: 100%;
     padding: 16px;
     display: flex;
-    flex-direction: column;
     gap: 12px;
   }
 
-  &__kanban-header {
-    gap: 12px;
+  &__filter {
+    padding: 16px 16px 0px 16px;
     display: flex;
-  }
 
-  &__kanban-header-item {
-    display: flex;
-    align-items: center;
-    width: 350px;
-    --main-color: #fff;
-    padding-left: 12px;
-
-    &.--new {
-      --main-color: rgb(112, 114, 143);
-    }
-
-    &.--in-progress {
-      --main-color: rgb(228, 124, 64);
-    }
-
-    &.--ready-test {
-      --main-color: rgb(228, 206, 64);
-    }
-
-    &.--done {
-      --main-color: rgb(168, 228, 64);
-    }
-
-    &::before {
-      display: block;
-      content: '';
-      width: 10px;
-      height: 10px;
-      background-color: var(--main-color);
-      border-radius: 50%;
-      margin-right: 8px;
+    mix-input {
+      width: 300px;
     }
   }
 }
@@ -54,4 +23,13 @@
   height: 900px;
   display: flex;
   flex-direction: column;
+}
+
+.task-dnd-list {
+  display: block;
+  min-height: 400px;
+  min-width: 200px;
+  width: 320px;
+  background-color: rgb(244 245 247);
+  border-radius: 0.125rem;
 }
