--- a/apps/mix-cms/src/app/pages/portal/task-manage/components/task-detail-modal/task-detail-modal.component.html
+++ b/apps/mix-cms/src/app/pages/portal/task-manage/components/task-detail-modal/task-detail-modal.component.html
@@ -26,6 +26,8 @@
 
       <div class="mt-4 mb-2 text-500 text-l text-sub">REPORTER</div>
 
+      <mix-user-select formControlName="reporter"></mix-user-select>
+
       <div class="mt-4 mb-2 text-500 text-l text-sub">PRORITY</div>
 
       <mix-select [items]="prorityItems"
