feat(): add filter by user

--- a/apps/mix-cms/src/app/pages/portal/task-manage/components/task-dnd-list/task-dnd-list.component.html
+++ b/apps/mix-cms/src/app/pages/portal/task-manage/components/task-dnd-list/task-dnd-list.component.html
@@ -1,5 +1,4 @@
-<div *ngIf="listTasks | async as tasks"
-     class="task-list">
+<div class="task-list">
   <div class="title text-uppercase text-truncate">
     {{ TaskStatusDisplay[status] }} {{ tasks.length }}
   </div>
