--- a/apps/mix-cms/src/app/pages/portal/task-manage/components/task-filter/task-filter.component.scss
+++ b/apps/mix-cms/src/app/pages/portal/task-manage/components/task-filter/task-filter.component.scss
@@ -29,4 +29,12 @@
       }
     }
   }
+
+  .separator {
+    content: '';
+    display: block;
+    height: 20px;
+    width: 1px;
+    background-color: var(--border-color-default);
+  }
 }
