--- a/apps/mix-cms/src/app/pages/portal/task-manage/components/task-dnd-list/task-dnd-list.component.scss
+++ b/apps/mix-cms/src/app/pages/portal/task-manage/components/task-dnd-list/task-dnd-list.component.scss
@@ -1,5 +1,8 @@
 .task-list {
   padding: 6px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
   .cdk-drop-list-dragging {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
@@ -7,6 +10,10 @@
     .cdk-drag:not(.cdk-drag-placeholder) {
       transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
     }
+  }
+
+  .items {
+    flex-grow: 1;
   }
 
   .title {
