--- a/apps/mix-cms/src/app/pages/portal/task-manage/components/task-create/task-create.component.html
+++ b/apps/mix-cms/src/app/pages/portal/task-manage/components/task-create/task-create.component.html
@@ -19,11 +19,15 @@
   <div class="mt-3 mb-1 text-sub text-500">Description</div>
   <mix-rich-text-editor formControlName="description"></mix-rich-text-editor>
 
+  <div class="mt-3 mb-1 text-sub text-500">Reporter</div>
+  <mix-user-select formControlName="reporter"></mix-user-select>
+
   <div *ngIf="loadingState$ | async as state"
        class="mt-4 d-flex justify-content-end align-items-center gap-2">
     <mix-button [loading]="state === 'Loading'"
                 (click)="createTask()">Create</mix-button>
     <mix-button type="outline"
-                [disabled]="state === 'Loading'">Cancel</mix-button>
+                [disabled]="state === 'Loading'"
+                (click)="dialogRef.close()">Cancel</mix-button>
   </div>
 </div>
